--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: red;
+  background-color: green;
   height: 500px;
   display: grid;
   grid-template-columns: auto;
@@ -7,5 +7,13 @@
 }
 
 .navbar {
+  background-color: black;
+  padding: 3px;
   display: grid;
+  grid-template-columns: 5% 25% 35% 30% 5%;
+  grid-template-rows: 100%;
+}
+
+.nav-menu {
+  color: white;
 }
