--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
 }
 
 .nav-menu a {
-  padding-left: 12px;;
+  padding-left: 12px;
 }
 
 .navbar button {
@@ -62,7 +62,12 @@ body {
 .streaming {
   display: grid;
   background-color: #191919 !important;
-  background-image: radial-gradient(at 80% 100%, hsla(241,0%,9%,1) 0px, transparent 50%), radial-gradient(at 1% 1%, hsla(348,47%,33%,1) 0px, transparent 50%) !important;
+  background-image: radial-gradient(
+      at 80% 100%,
+      hsla(241, 0%, 9%, 1) 0px,
+      transparent 50%
+    ),
+    radial-gradient(at 1% 1%, hsla(348, 47%, 33%, 1) 0px, transparent 50%) !important;
   grid-column: 1/-1;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(5, 1fr);
@@ -71,7 +76,7 @@ body {
 .streaming h1 {
   grid-column: 3/7;
   grid-row: 2/3;
-  font-family: 'Genta', sans-serif;
+  font-family: "Genta", sans-serif;
   font-size: 58px;
   color: #f74366;
   text-align: center;
@@ -81,7 +86,7 @@ body {
 .streaming h4 {
   grid-column: 3/7;
   grid-row: 3/4;
-  font-family: 'Genta', sans-serif;
+  font-family: "Genta", sans-serif;
   color: white;
   text-align: center;
 }
@@ -101,7 +106,7 @@ body {
   outline: 0;
   border: 0;
   line-height: 1;
-  }
+}
 
 .discover {
   display: grid;
@@ -129,7 +134,7 @@ body {
   grid-column: 2/6;
 }
 .space {
-  grid-column: 7/9
+  grid-column: 7/9;
 }
 .menu-selector {
   grid-column: 9/10;
@@ -143,6 +148,20 @@ body {
   grid-column: 2/10;
   grid-row: 2/11;
   background-color: red;
+}
+
+.card-info {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  grid-column: 2/5;
+  grid-row: 2/11;
+}
+
+.menu-card div img {
+  grid-column: 5/10;
+  grid-row: 2/11;
 }
 
 .ratings {
