--- a/styles.css
+++ b/styles.css
@@ -133,9 +133,11 @@ body {
 .menu {
   grid-column: 2/6;
 }
+
 .space {
   grid-column: 7/9;
 }
+
 .menu-selector {
   grid-column: 9/10;
 }
@@ -147,7 +149,7 @@ body {
 .menu-card {
   grid-column: 2/10;
   grid-row: 2/11;
-  background-color: red;
+  background-image: linear-gradient(135deg,rgb(74,234,220) 0%,rgb(151,120,209) 20%,rgb(207,42,186) 40%,rgb(238,44,130) 60%,rgb(251,105,98) 80%,rgb(254,248,76) 100%);
 }
 
 .card-info {
@@ -157,11 +159,37 @@ body {
   justify-content: center;
   grid-column: 2/5;
   grid-row: 2/11;
+  margin-left: 50px;
+  margin-bottom: 40px;
+  font-family: "Genta", sans-serif;
+}
+
+.card-info h2 {
+  font-size: 38px;
+  margin-left: -25px;
+  margin-bottom: 0px;
+}
+
+.card-info button {
+  width: 190px;
+  height: 45px;
+  background-color: white;
+  border-radius: 1000px;
+  padding: 15px 36px 17px;
+  margin-top: 15px;
+  position: relative;
+  right: 28%;
+  font-style: normal;
+  font-weight: bold;
+  outline: 0;
+  border: 0;
+  line-height: 1;
 }
 
 .menu-card div img {
   grid-column: 5/10;
   grid-row: 2/11;
+  margin-right: 30px;
 }
 
 .ratings {
