--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,60 @@ body {
 
 .ratings {
   display: grid;
+  grid-template-columns: 15% repeat(4, 17.5%) 15%;
+  grid-template-rows: 20% 60% 20%;
   background-color: black;
   grid-column: 1/-1;
+  
+}
+
+.ratings div {
+  grid-row: 2/3;
+  color: #999999;
+  font-weight: bolder;
+  font-family: "Genta", sans-serif;
+}
+
+.rating1 {
+  grid-column: 2/3;
+}
+
+.rating2 {
+  grid-column: 3/4;
+}
+
+.rating3 {
+  grid-column: 4/5;
+}
+
+.store {
+  display: flex;
+  align-items: center;
+}
+
+.store img {
+ margin-right: 7px;
+}
+
+.average {
+  color: white;
+}
+
+.download {
+  grid-column: 5/6;
+}
+
+.download h2 {
+  color: white;
+  font-weight: bold;
+  margin-top: 15px;
+}
+
+.badges {
+  display: flex;
+  flex-direction: column;
+}
+
+.badges img {
+  margin-bottom: 10px;
 }
