--- a/styles.css
+++ b/styles.css
@@ -251,3 +251,62 @@ body {
 .badges img {
   margin-bottom: 10px;
 }
+
+.media {
+  display: grid;
+  grid-template-columns: 10% 35% 15% 40%;
+  grid-template-rows: 12% 88%;
+  background-color: #139bfc;
+  height: 750px;
+}
+
+.media-info {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  display: grid;
+  grid-template-columns: repeat(3, 33.33%);
+  grid-template-rows: repeat(10, 10%);
+  font-family: "Genta", sans-serif;
+}
+
+.media-info h2 {
+  grid-column: 1/4;
+  grid-row: 3/5;
+  font-size: 48px;
+  margin-top: 10px;
+}
+
+.media-info p {
+  grid-column: 1/4;
+  grid-row: 5/7;
+  margin-top: 10px;
+  
+}
+
+.media-info button {
+  grid-column: 1/2;
+  grid-row: 6/7;
+  width: 170px;
+  height: 45px;
+  background-color: #f7c600;
+  border-radius: 1000px;
+  margin-top: 20px;
+  padding: 15px;
+  left: 25%;
+  font-weight: bolder;
+  letter-spacing: -.01em;
+  outline: 0;
+  border: 0;
+  line-height: 1;
+  transition: all 0.2s ease-in-out !important;
+  box-shadow: 20px 20px 40px 0 rgb(0 0 0 / 20%) !important;
+}
+
+
+.devices {
+  grid-column: 4/5;
+  grid-row: 2/11;
+  background-image: url("./assets/img/devices-image.png");
+  background-size: 120%;
+  background-repeat: no-repeat;
+}
