--- a/styles.css
+++ b/styles.css
@@ -4,63 +4,77 @@ body {
 
 .container {
   background-color: green;
-  height: 3000px;
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: 1.5% 50% 13.5% 13.5% 21.5%;
+  grid-template-rows: repeat(5, auto)/* 1.5% 50% 13.5% 13.5% 21.5% */;
 }
 
 .navbar {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  height: 63%;
+  width: auto;
+  margin: 7px;
+  padding: 3px;
   position: sticky;
   top: 0;
   background-color: black;
-  padding: 3px;
+  opacity: 0.7;
+  border-radius: 5px;
   display: grid;
   grid-template-columns: 5% 26% 28% 35% 6%;
   grid-template-rows: 100%;
-}
 
-.navbar img {
-  height: 25px;
-  margin: 8px 15px 8px 15px;
-}
+  img {
+    height: 25px;
+    margin: 8px 15px 8px 15px;
+  }
 
-.navbar input {
-  height: 25px;
-  margin: 6px 0px 6px 0px;
-  border-radius: 1000px;
-  outline: 0;
-  border: 0;
+  input {
+    height: 25px;
+    margin: 6px 0px 6px 0px;
+    border-radius: 1000px;
+    outline: 0;
+    border: 0;
+  }
+
+  button {
+    background-color: #e5a00d;
+    font-weight: bold;
+    outline: 0;
+    border: 0;
+    border-radius: 5px;
+    height: 25px;
+    margin: 8px 15px 0px 0px;
+  }
 }
 
 .nav-menu {
   color: white;
   text-align: center;
   padding-top: 8px;
-}
 
-.nav-menu a {
-  padding-left: 12px;
-}
-
-.navbar button {
-  background-color: #e5a00d;
-  font-weight: bold;
-  outline: 0;
-  border: 0;
-  border-radius: 5px;
-  height: 25px;
-  margin: 8px 15px 0px 0px;
+  a {
+    padding-left: 12px;
+  }
 }
 
 .main {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  height: 130%;
+  width: auto;
   display: grid;
   grid-template-columns: 1fr 4fr 1fr;
   grid-template-rows: 25% 50% 25%;
 }
 
 .streaming {
+  grid-column: 1/4;
+  grid-row: 1/2;
   display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(5, 1fr);
   background-color: #191919 !important;
   background-image: radial-gradient(
       at 80% 100%,
@@ -68,47 +82,47 @@ body {
       transparent 50%
     ),
     radial-gradient(at 1% 1%, hsla(348, 47%, 33%, 1) 0px, transparent 50%) !important;
-  grid-column: 1/-1;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-}
 
-.streaming h1 {
-  grid-column: 3/7;
-  grid-row: 2/3;
-  font-family: "Genta", sans-serif;
-  font-size: 58px;
-  color: #f74366;
-  text-align: center;
-  margin-bottom: 0%;
-}
+  h1 {
+    grid-column: 3/7;
+    grid-row: 2/3;
+    font-family: "Genta", sans-serif;
+    font-size: 64px;
+    color: #f74366;
+    text-align: center;
+    margin-bottom: 0%;
+  }
 
-.streaming h4 {
-  grid-column: 3/7;
-  grid-row: 3/4;
-  font-family: "Genta", sans-serif;
-  color: white;
-  text-align: center;
-}
+  h4 {
+    grid-column: 3/7;
+    grid-row: 3/4;
+    font-family: "Genta", sans-serif;
+    color: white;
+    text-align: center;
+    line-height: 1.5rem;
+  }
 
-.streaming button {
-  grid-column: 4/6;
-  grid-row: 4/5;
-  width: 220px;
-  height: 45px;
-  background-color: #f7c600;
-  border-radius: 1000px;
-  padding: 15px 36px 17px;
-  position: relative;
-  left: 25%;
-  font-style: normal;
-  font-weight: bold;
-  outline: 0;
-  border: 0;
-  line-height: 1;
+  button {
+    grid-column: 4/6;
+    grid-row: 4/5;
+    width: 220px;
+    height: 45px;
+    background-color: #f7c600;
+    border-radius: 1000px;
+    padding: 15px 36px 17px;
+    position: relative;
+    left: 25%;
+    font-style: normal;
+    font-weight: bold;
+    outline: 0;
+    border: 0;
+    line-height: 1;
+  }
 }
 
 .discover {
+  grid-column: 1/4;
+  grid-row: 2/3;
   display: grid;
   grid-template-columns: 15% repeat(8, 8.75%) 15%;
   grid-template-rows: 10% repeat(9, 8.88%) 10%;
@@ -119,37 +133,46 @@ body {
     #171717 50%,
     #171717 100%
   );
-  grid-column: 1/-1;
-}
 
-.discover div {
-  color: white;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  div {
+    color: white;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  a:hover {
+    color: #f7c600;
+  }
 }
 
 .menu {
   grid-column: 2/6;
+  grid-row: 1/2;
 }
 
 .space {
   grid-column: 7/9;
+  grid-row: 1/2;
 }
 
 .menu-selector {
   grid-column: 9/10;
-}
-
-.discover a:hover {
-  color: #f7c600;
+  grid-row: 1/2;
 }
 
 .menu-card {
   grid-column: 2/10;
   grid-row: 2/11;
+  border-radius: 20px;
   background-image: linear-gradient(135deg,rgb(74,234,220) 0%,rgb(151,120,209) 20%,rgb(207,42,186) 40%,rgb(238,44,130) 60%,rgb(251,105,98) 80%,rgb(254,248,76) 100%);
+
+  div img {
+    grid-column: 5/10;
+    grid-row: 2/11;
+    margin-right: 30px;
+  }
 }
 
 .card-info {
@@ -162,50 +185,44 @@ body {
   margin-left: 50px;
   margin-bottom: 40px;
   font-family: "Genta", sans-serif;
-}
 
-.card-info h2 {
-  font-size: 38px;
-  margin-left: -25px;
-  margin-bottom: 0px;
-}
+  h2 {
+    font-size: 38px;
+    margin-left: -25px;
+    margin-bottom: 0px;
+  }
 
-.card-info button {
-  width: 190px;
-  height: 45px;
-  background-color: white;
-  border-radius: 1000px;
-  padding: 15px 36px 17px;
-  margin-top: 15px;
-  position: relative;
-  right: 28%;
-  font-style: normal;
-  font-weight: bold;
-  outline: 0;
-  border: 0;
-  line-height: 1;
-}
-
-.menu-card div img {
-  grid-column: 5/10;
-  grid-row: 2/11;
-  margin-right: 30px;
+  button {
+    width: 190px;
+    height: 45px;
+    background-color: white;
+    border-radius: 1000px;
+    padding: 15px 36px 17px;
+    margin-top: 15px;
+    position: relative;
+    right: 28%;
+    font-style: normal;
+    font-weight: bold;
+    outline: 0;
+    border: 0;
+    line-height: 1;
+  }
 }
 
 .ratings {
+  grid-column: 1/4;
+  grid-row: 3/4;
   display: grid;
   grid-template-columns: 15% repeat(4, 17.5%) 15%;
   grid-template-rows: 20% 60% 20%;
   background-color: black;
-  grid-column: 1/-1;
   
-}
-
-.ratings div {
-  grid-row: 2/3;
-  color: #999999;
-  font-weight: bolder;
-  font-family: "Genta", sans-serif;
+  div {
+    grid-row: 2/3;
+    color: #999999;
+    font-weight: bolder;
+    font-family: "Genta", sans-serif;
+  }
 }
 
 .rating1 {
@@ -223,11 +240,12 @@ body {
 .store {
   display: flex;
   align-items: center;
+
+  img {
+    margin-right: 7px;
+   }
 }
 
-.store img {
- margin-right: 7px;
-}
 
 .average {
   color: white;
@@ -235,29 +253,32 @@ body {
 
 .download {
   grid-column: 5/6;
-}
 
-.download h2 {
-  color: white;
-  font-weight: bold;
-  margin-top: 15px;
+  h2 {
+    color: white;
+    font-weight: bold;
+    margin-top: 15px;
+  }
 }
 
 .badges {
   display: flex;
   flex-direction: column;
-}
 
-.badges img {
-  margin-bottom: 10px;
+  img {
+    margin-bottom: 10px;
+  }
 }
 
 .media {
+  grid-column: 1/2;
+  grid-row: 4/5;
+  height: 300%;
   display: grid;
   grid-template-columns: 10% 35% 15% 40%;
   grid-template-rows: 12% 88%;
   background-color: #139bfc;
-  height: 750px;
+  
 }
 
 .media-info {
@@ -267,41 +288,40 @@ body {
   grid-template-columns: repeat(3, 33.33%);
   grid-template-rows: repeat(10, 10%);
   font-family: "Genta", sans-serif;
-}
 
-.media-info h2 {
-  grid-column: 1/4;
-  grid-row: 3/5;
-  font-size: 48px;
-  margin-top: 10px;
-}
+  h2 {
+    grid-column: 1/4;
+    grid-row: 3/5;
+    font-size: 48px;
+    margin-top: 10px;
+  }
 
-.media-info p {
-  grid-column: 1/4;
-  grid-row: 5/7;
-  margin-top: 10px;
-  
-}
+  p {
+    grid-column: 1/4;
+    grid-row: 5/7;
+    margin-top: 10px;
+    
+  }
 
-.media-info button {
-  grid-column: 1/2;
-  grid-row: 6/7;
-  width: 170px;
-  height: 45px;
-  background-color: #f7c600;
-  border-radius: 1000px;
-  margin-top: 20px;
-  padding: 15px;
-  left: 25%;
-  font-weight: bolder;
-  letter-spacing: -.01em;
-  outline: 0;
-  border: 0;
-  line-height: 1;
-  transition: all 0.2s ease-in-out !important;
-  box-shadow: 20px 20px 40px 0 rgb(0 0 0 / 20%) !important;
+  button {
+    grid-column: 1/2;
+    grid-row: 6/7;
+    width: 170px;
+    height: 45px;
+    background-color: #f7c600;
+    border-radius: 1000px;
+    margin-top: 20px;
+    padding: 15px;
+    left: 25%;
+    font-weight: bolder;
+    letter-spacing: -.01em;
+    outline: 0;
+    border: 0;
+    line-height: 1;
+    transition: all 0.2s ease-in-out !important;
+    box-shadow: 20px 20px 40px 0 rgb(0 0 0 / 20%) !important;
+  }
 }
-
 
 .devices {
   grid-column: 4/5;
