--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,15 @@ body {
   background-color: green;
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: repeat(5, auto)/* 1.5% 50% 13.5% 13.5% 21.5% */;
+  grid-template-rows: repeat(6, auto);
+  height: 100vh;
+  gap: 0;
 }
 
 .navbar {
   grid-column: 1/2;
   grid-row: 1/2;
-  height: 63%;
-  width: auto;
+  height: 39px;
   margin: 7px;
   padding: 3px;
   position: sticky;
@@ -62,7 +63,7 @@ body {
 .main {
   grid-column: 1/2;
   grid-row: 1/3;
-  height: 130%;
+  height: 1500px;
   width: auto;
   display: grid;
   grid-template-columns: 1fr 4fr 1fr;
@@ -215,7 +216,7 @@ body {
   display: grid;
   grid-template-columns: 15% repeat(4, 17.5%) 15%;
   grid-template-rows: 20% 60% 20%;
-  background-color: black;
+  background-color: black;  
   
   div {
     grid-row: 2/3;
@@ -246,7 +247,6 @@ body {
    }
 }
 
-
 .average {
   color: white;
 }
@@ -272,8 +272,8 @@ body {
 
 .media {
   grid-column: 1/2;
-  grid-row: 4/5;
-  height: 300%;
+  grid-row: 3/4;
+  height: 800px;
   display: grid;
   grid-template-columns: 10% 35% 15% 40%;
   grid-template-rows: 12% 88%;
@@ -330,3 +330,18 @@ body {
   background-size: 120%;
   background-repeat: no-repeat;
 }
+
+.blog {
+  grid-column: 1/2;
+  grid-row: 5/6;
+  height: 400px;
+  background-color: red;
+}
+
+.footer {
+  grid-column: 1/2;
+  grid-row: 6/7;
+  height: 400px;
+  background-color: violet;
+}
+
