--- a/styles.css
+++ b/styles.css
@@ -334,8 +334,67 @@ body {
 .blog {
   grid-column: 1/2;
   grid-row: 5/6;
-  height: 400px;
-  background-color: red;
+  height: 600px;
+  background-color: black;
+  display: grid;
+  grid-template-columns: 10% repeat(3, 26.6%) 10%;
+  grid-template-rows: 25% 60% 15%;
+
+  h1 {
+    grid-column: 3/4;
+    grid-row: 1/2;
+    color: white;
+    font-weight: bolder;
+    font-size: 40px;
+    position: relative;
+    left: 25%;
+    margin-top: 50px;
+  }
+
+  div {
+    color: white;
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter:  grayscale(60%);
+    margin: 20px 10px 20px 10px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+
+    h2 {
+      margin-left: 50px;
+      margin-top: 0px;
+      margin-bottom: 45px;
+      filter: brightness(150%);
+    }
+
+    h6 {
+      margin-left: 50px;
+      margin-bottom: 15px;
+      font-size: 16px;
+      filter: brightness(150%);
+    }
+  }
+}
+
+.blog-card1 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  background-image: url("./assets/img/blog1.png");
+}
+
+.blog-card2 {
+  grid-column: 3/4;
+  grid-row: 2/3;
+  background-image: url("./assets/img/blog2.png");
+}
+
+.blog-card3 {
+  grid-column: 4/5;
+  grid-row: 2/3;
+  background-image: url("./assets/img/blog3.png");
 }
 
 .footer {
@@ -343,5 +402,6 @@ body {
   grid-row: 6/7;
   height: 400px;
   background-color: violet;
+  
 }
 
