--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 body {
-  margin: 0% 3% 0% 3%;
+  margin: 0%;
 }
 
 .container {
-  background-color: green;
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: repeat(6, auto);
@@ -15,7 +14,7 @@ body {
   grid-column: 1/2;
   grid-row: 1/2;
   height: 39px;
-  margin: 7px;
+  margin: 0.3% 3.5% 0% 3.5%;
   padding: 3px;
   position: sticky;
   top: 0;
@@ -65,6 +64,8 @@ body {
   grid-row: 1/3;
   height: 1500px;
   width: auto;
+  margin-left: 3%;
+  margin-right: 3%;
   display: grid;
   grid-template-columns: 1fr 4fr 1fr;
   grid-template-rows: 25% 50% 25%;
@@ -274,6 +275,8 @@ body {
   grid-column: 1/2;
   grid-row: 3/4;
   height: 800px;
+  margin-left: 3%;
+  margin-right: 3%;
   display: grid;
   grid-template-columns: 10% 35% 15% 40%;
   grid-template-rows: 12% 88%;
@@ -335,6 +338,8 @@ body {
   grid-column: 1/2;
   grid-row: 5/6;
   height: 600px;
+  margin-left: 3%;
+  margin-right: 3%;
   background-color: black;
   display: grid;
   grid-template-columns: 10% repeat(3, 26.6%) 10%;
@@ -400,8 +405,10 @@ body {
 .footer {
   grid-column: 1/2;
   grid-row: 6/7;
-  height: 400px;
-  background-color: violet;
-  
+  height: 550px;
+  background-color: #282a2d;
+  display: grid;
+  grid-template-columns: repeat(8, auto);
+  grid-template-rows: repeat(5, auto);
 }
 
