--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,15 @@ body {
   grid-column: 2/10;
   grid-row: 2/11;
   border-radius: 20px;
-  background-image: linear-gradient(135deg,rgb(74,234,220) 0%,rgb(151,120,209) 20%,rgb(207,42,186) 40%,rgb(238,44,130) 60%,rgb(251,105,98) 80%,rgb(254,248,76) 100%);
+  background-image: linear-gradient(
+    135deg,
+    rgb(74, 234, 220) 0%,
+    rgb(151, 120, 209) 20%,
+    rgb(207, 42, 186) 40%,
+    rgb(238, 44, 130) 60%,
+    rgb(251, 105, 98) 80%,
+    rgb(254, 248, 76) 100%
+  );
 
   div img {
     grid-column: 5/10;
@@ -217,8 +225,8 @@ body {
   display: grid;
   grid-template-columns: 15% repeat(4, 17.5%) 15%;
   grid-template-rows: 20% 60% 20%;
-  background-color: black;  
-  
+  background-color: black;
+
   div {
     grid-row: 2/3;
     color: #999999;
@@ -245,7 +253,7 @@ body {
 
   img {
     margin-right: 7px;
-   }
+  }
 }
 
 .average {
@@ -281,7 +289,6 @@ body {
   grid-template-columns: 10% 35% 15% 40%;
   grid-template-rows: 12% 88%;
   background-color: #139bfc;
-  
 }
 
 .media-info {
@@ -303,7 +310,6 @@ body {
     grid-column: 1/4;
     grid-row: 5/7;
     margin-top: 10px;
-    
   }
 
   button {
@@ -317,7 +323,7 @@ body {
     padding: 15px;
     left: 25%;
     font-weight: bolder;
-    letter-spacing: -.01em;
+    letter-spacing: -0.01em;
     outline: 0;
     border: 0;
     line-height: 1;
@@ -360,7 +366,7 @@ body {
     color: white;
     background-size: cover;
     background-repeat: no-repeat;
-    filter:  grayscale(70%);
+    filter: grayscale(70%);
     margin: 20px 10px 20px 10px;
     border-radius: 15px;
     display: flex;
@@ -417,7 +423,7 @@ body {
   }
 
   h2:hover {
-    color:#f7c600;
+    color: #f7c600;
   }
 
   a {
@@ -426,12 +432,21 @@ body {
   }
 
   a:hover {
-    color:#f7c600;
+    color: #f7c600;
   }
 
   hr {
     grid-column: 1/9;
-    grid-row: 4;
+    grid-row: 4/5;
+    width: 100%;
+  border: none;
+  height: 3px;
+  color: grey;
+  }
+
+  p {
+    color: #525152;
+    margin: 5px 5px 7px 10px;
   }
 }
 
@@ -439,7 +454,7 @@ body {
   grid-column: 2/3;
   grid-row: 2/3;
   height: 43px;
-  margin: 8px 15px 8px 15px; 
+  margin: 8px 15px 8px 15px;
 }
 
 .map-links {
@@ -447,7 +462,7 @@ body {
   grid-row: 2/3;
   display: flex;
   flex: row;
-  
+
   div {
     display: flex;
     flex-direction: column;
@@ -456,5 +471,16 @@ body {
   }
 }
 
+.lopd {
+  grid-column: 2/4;
+  grid-row: 5/6;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 
+  a {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+}
 
