--- a/styles.css
+++ b/styles.css
@@ -288,18 +288,19 @@ body {
   margin-left: 3%;
   margin-right: 3%;
   display: grid;
-  grid-template-columns: 10% 35% 15% 40%;
+  grid-template-columns: repeat(8, 1fr);
   grid-template-rows: 12% 88%;
   background-color: #139bfc;
 }
 
 .media-info {
-  grid-column: 2/3;
+  grid-column: 1/6;
   grid-row: 2/3;
   display: grid;
   grid-template-columns: repeat(3, 33.33%);
   grid-template-rows: repeat(10, 10%);
   font-family: "Genta", sans-serif;
+  margin-left: 40px;
 
   h2 {
     grid-column: 1/4;
@@ -316,7 +317,7 @@ body {
 
   button {
     grid-column: 1/2;
-    grid-row: 6/7;
+    grid-row: 6/8;
     width: 170px;
     height: 45px;
     background-color: #f7c600;
@@ -331,14 +332,15 @@ body {
     line-height: 1;
     transition: all 0.2s ease-in-out !important;
     box-shadow: 20px 20px 40px 0 rgb(0 0 0 / 20%) !important;
+    
   }
 }
 
 .devices {
-  grid-column: 4/5;
+  grid-column: 6/9;
   grid-row: 2/11;
   background-image: url("./assets/img/devices-image.png");
-  background-size: 120%;
+  background-size: 150%;
   background-repeat: no-repeat;
 }
 
@@ -521,7 +523,5 @@ body {
     color: #ff0000;
   }
 }
-
-.networks 
 
 
